@@ -1,5 +1,5 @@
 /*
- * $Id: dbf1.c,v 1.22 2003/03/08 01:40:36 horacioroldan Exp $
+ * $Id: dbf1.c,v 1.23 2003/04/21 18:04:12 walito Exp $
  */
 
 /*
@@ -1741,6 +1741,7 @@ ERRCODE hb_dbfOpen( DBFAREAP pArea, LPDBOPENINFO pOpenInfo )
    if( ( ( PHB_DYNS ) pArea->atomAlias )->hArea )
    {
       hb_errRT_DBCMD( EG_DUPALIAS, EDBCMD_DUPALIAS, NULL, ( char * ) pOpenInfo->atomAlias );
+      hb_xfree( pArea->szDataFileName );
       return FAILURE;
    }
 
@@ -1787,7 +1788,11 @@ ERRCODE hb_dbfOpen( DBFAREAP pArea, LPDBOPENINFO pOpenInfo )
 
    /* Exit if error */
    if( pArea->hDataFile == FS_ERROR )
+   {
+      hb_xfree( pArea->szDataFileName );
+      pArea->szDataFileName = NULL;
       return FAILURE;
+   }
 
    /* Read file header and exit if error */
    if( SELF_READDBHEADER( ( AREAP ) pArea ) == FAILURE )
