@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.995 2003/04/30 11:22:22 lculik Exp $
+ * $Id: ChangeLog,v 1.996 2003/05/01 14:11:34 patrickmast Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,16 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-05-01 11:06 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
+  * source/rdd/dbfntx/dbfntx1.c
+    ! Small fix to dbfntx
+    ! Also set error level to error object when file is not successfully open (clipper compatible)
+  * source/rdd/rdd/dbf1.c
+    ! When Open of Dbf file fail, release memory of Filename(this avoid GPF) (   hb_xfree( pArea->szDataFileName ));
+    * Both changes  above  borrow from harbour
+  * source/rtl/listbox.prg
+    ! minor fix
 
 2003-05-01 15:56 UTC+0100 Patrick Mast <patrick@winfakt.com>
   * source/rtl/tget.prg
